// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cancel save 1`] = `
Object {
  "Options": Object {
    "confirmCancelErrors": Object {
      "Messages": Array [],
    },
    "confirmText": "",
    "confirmTitle": "",
    "getErrors": [Function],
    "modalVisible": false,
    "onSuccess": [Function],
    "saveData": [MockFunction],
    "submitText": "Update",
  },
  "html": "
<form class=\\"form-layout\\">
  <!--0-->
  <!--0-->
  <!--1-->
  <!--0-->
  <!--2-->
  <button type=\\"submit\\">
    <!--3-->Update
    <!--4-->
  </button>
  <!--5-->
</form>
<!--0-->
<!--1-->
",
}
`;

exports[`fail save 1`] = `
Object {
  "Options": Object {
    "confirmCancelErrors": Object {
      "Messages": Array [],
    },
    "confirmText": "",
    "confirmTitle": "",
    "getErrors": [Function],
    "modalVisible": false,
    "onSuccess": [Function],
    "saveData": [Function],
    "submitText": "Update",
  },
  "html": "
<form class=\\"form-layout\\">
  <!--0-->
  <ul class=\\"errors-panel\\">
    <li>Error test</li>
  </ul>
  <!--0-->
  <!--1-->
  <!--0-->
  <!--2-->
  <button type=\\"submit\\">
    <!--3-->Update
    <!--4-->
  </button>
  <!--5-->
</form>
<!--0-->
<!--1-->
",
}
`;

exports[`renders correctly 1`] = `
Object {
  "Options": Object {
    "confirmCancelErrors": Object {
      "Messages": Array [],
    },
    "confirmText": "",
    "confirmTitle": "",
    "getErrors": [Function],
    "modalVisible": false,
    "onSuccess": [Function],
    "saveData": [Function],
    "submitText": "Update",
  },
  "html": "
<form class=\\"form-layout\\">
  <!--0-->
  <!--0-->
  <!--1-->
  <!--0-->
  <!--2-->
  <button type=\\"submit\\">
    <!--3-->Update
    <!--4-->
  </button>
  <!--5-->
</form>
<!--0-->
<!--1-->
",
}
`;

exports[`success save 1`] = `
Object {
  "Options": Object {
    "confirmCancelErrors": Object {
      "Messages": Array [],
    },
    "confirmText": "",
    "confirmTitle": "",
    "getErrors": [Function],
    "modalVisible": true,
    "onSuccess": [MockFunction],
    "saveData": [Function],
    "submitText": "Update",
  },
  "html": "
<form class=\\"form-layout\\">
  <!--0-->
  <!--0-->
  <!--1-->
  <!--0-->
  <!--2-->
  <button type=\\"submit\\" disabled=\\"\\">
    <div class=\\"sk-cube-grid\\">
      <div class=\\"sk-cube sk-cube1\\"></div>
      <div class=\\"sk-cube sk-cube2\\"></div>
      <div class=\\"sk-cube sk-cube3\\"></div>
      <div class=\\"sk-cube sk-cube4\\"></div>
      <div class=\\"sk-cube sk-cube5\\"></div>
      <div class=\\"sk-cube sk-cube6\\"></div>
      <div class=\\"sk-cube sk-cube7\\"></div>
      <div class=\\"sk-cube sk-cube8\\"></div>
      <div class=\\"sk-cube sk-cube9\\"></div>
    </div>
    <!--0-->
    <!--3-->Update
    <!--4-->
  </button>
  <!--5-->
</form>
<!--0-->
<div class=\\"modal\\" data-test-modal=\\"\\"><span class=\\"close\\" title=\\"Close Modal\\" data-test-close-button=\\"\\">×</span>
  <!--0-->
  <div class=\\"modal-content\\">
    <div class=\\"container\\">
      <h4></h4>
      <p class=\\"content\\"></p>
      <div class=\\"footer\\">
        <button data-test-ok-button=\\"\\" class=\\"\\">Ok</button>
        <button class=\\"btn-secondary\\" data-test-cancel-button=\\"\\">Cancel</button>
      </div>
    </div>
  </div>
</div>
<!--0-->
<!--1-->
",
}
`;

exports[`success save 2`] = `
Object {
  "Options": Object {
    "confirmCancelErrors": Object {
      "Messages": Array [],
    },
    "confirmText": "",
    "confirmTitle": "",
    "getErrors": [Function],
    "modalVisible": false,
    "onSuccess": [MockFunction] {
      "calls": Array [
        Array [
          false,
        ],
      ],
      "results": Array [
        Object {
          "isThrow": false,
          "value": undefined,
        },
      ],
    },
    "saveData": [Function],
    "submitText": "Update",
  },
  "html": "
<form class=\\"form-layout\\">
  <!--0-->
  <!--0-->
  <!--1-->
  <!--0-->
  <!--2-->
  <button type=\\"submit\\" disabled=\\"\\">
    <div class=\\"sk-cube-grid\\">
      <div class=\\"sk-cube sk-cube1\\"></div>
      <div class=\\"sk-cube sk-cube2\\"></div>
      <div class=\\"sk-cube sk-cube3\\"></div>
      <div class=\\"sk-cube sk-cube4\\"></div>
      <div class=\\"sk-cube sk-cube5\\"></div>
      <div class=\\"sk-cube sk-cube6\\"></div>
      <div class=\\"sk-cube sk-cube7\\"></div>
      <div class=\\"sk-cube sk-cube8\\"></div>
      <div class=\\"sk-cube sk-cube9\\"></div>
    </div>
    <!--0-->
    <!--3-->Update
    <!--4-->
  </button>
  <!--5-->
</form>
<!--0-->
<!--1-->
",
}
`;
